--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_script:
   - composer self-update
   - composer install
 
-script: ./vendor/bin/phpunit --bootstrap vendor/autoload.php
+script: vendor/bin/phpunit --bootstrap vendor/autoload.php tests
