--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bobbynarvy/highway",
     "description": "Simple routing for PHP",
-    "version": "0.1.0",
+    "version": "0.2.1",
     "type": "library",
     "keywords": [
         "router",
@@ -26,7 +26,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7",
+        "zendframework/zend-httphandlerrunner": "^1.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox"
