--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php" : "^7.1",
         "psr/http-message": "^1.0",
+        "psr/http-server-handler": "^1.0",
         "zendframework/zend-diactoros": "^2.0"
     },
     "autoload": {
