--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php" : "^7.1",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
+        "psr/http-server-middleware": "^1.0",
         "zendframework/zend-diactoros": "^2.0"
     },
     "autoload": {
