--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bobbynarvy/highway",
+    "name": "fizk/highway",
     "description": "Simple routing for PHP. PSR-7 and PSR-15 compatible.",
     "type": "library",
     "keywords": [
@@ -15,11 +15,10 @@
         }
     ],
     "require": {
-        "php" : "^7.1",
+        "php" : "^7.2",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
-        "psr/http-server-middleware": "^1.0",
-        "zendframework/zend-diactoros": "^2.0"
+        "psr/http-server-middleware": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -28,7 +27,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
-        "zendframework/zend-httphandlerrunner": "^1.0"
+        "laminas/laminas-diactoros": "^2.3"
     },
     "scripts": {
         "test": "vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox"
